Изменение в проекте. 1. Добавил иконки в меню 2. Добавил в String - текст

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="КРОКОДИЛ"
+            android:text="@string/text"
             android:textColor="#FFF7F7"
             android:textSize="24sp"
             android:textStyle="bold" />
