--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MENU"
+        android:text="@string/menu"
         android:textColor="#0E0C0C"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
