--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="grey">#8E8E8E</color>
+    <color name="green">#5AB55D</color>
+    <color name="red">#F81606</color>
+
 
     <color name="yellow">#E88C05</color>
 
