Изменение в проекте. 1. Добавил 3 уровня сложности 2. Создал Новую категорию

--- a/app/src/main/res/layout/activity_page_average.xml
+++ b/app/src/main/res/layout/activity_page_average.xml
@@ -8,7 +8,7 @@
     android:layout_gravity="center"
 
     android:background="@drawable/img"
-    tools:context=".MainActivity">
+    tools:context=".PageAverage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="180dp"
             android:gravity="center"
-            android:text="Легкий Уровень"
+            android:text="Средний Уровень"
             android:textColor="@color/yellow"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -41,7 +41,7 @@
                 android:gravity="center"
                 android:text="@string/text"
                 android:textColor="#FFF7F7"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -75,7 +75,7 @@
         android:id="@+id/contex"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:gravity="center|end"
+        android:gravity="top"
         android:orientation="horizontal">
 
         <ImageButton
@@ -85,9 +85,9 @@
             android:layout_gravity="bottom"
             android:layout_marginRight="120dp"
             android:background="@null"
+            android:contentDescription="@string/description"
             android:scaleType="centerCrop"
-            android:src="@drawable/music"
-            android:contentDescription="@string/description"/>
+            android:src="@drawable/music" />
 
         <ImageButton
             android:id="@+id/buttonSetting"
@@ -96,9 +96,9 @@
             android:layout_gravity="bottom"
             android:layout_marginRight="130dp"
             android:background="@null"
+            android:contentDescription="@string/description"
             android:scaleType="centerCrop"
-            android:src="@drawable/setting"
-            android:contentDescription="@string/description"/>
+            android:src="@drawable/setting" />
 
         <ImageButton
             android:id="@+id/buttonPlay"
@@ -106,9 +106,9 @@
             android:layout_height="50dp"
             android:layout_gravity="bottom"
             android:background="@null"
+            android:contentDescription="@string/description"
             android:scaleType="centerCrop"
-            android:src="@drawable/play"
-            android:contentDescription="@string/description"/>
+            android:src="@drawable/play" />
 
     </LinearLayout>
 
