--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,15 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/buttonBack"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="160dp"
+
+            android:src="@drawable/back_2" />
+
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
@@ -30,7 +39,7 @@
         <LinearLayout
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_marginBottom="200dp"
+            android:layout_marginBottom="300dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -85,9 +94,9 @@
             android:layout_gravity="bottom"
             android:layout_marginRight="120dp"
             android:background="@null"
+            android:contentDescription="@string/description"
             android:scaleType="centerCrop"
-            android:src="@drawable/music"
-            android:contentDescription="@string/description"/>
+            android:src="@drawable/music_off" />
 
         <ImageButton
             android:id="@+id/buttonSetting"
@@ -96,9 +105,9 @@
             android:layout_gravity="bottom"
             android:layout_marginRight="130dp"
             android:background="@null"
+            android:contentDescription="@string/description"
             android:scaleType="centerCrop"
-            android:src="@drawable/setting"
-            android:contentDescription="@string/description"/>
+            android:src="@drawable/setting" />
 
         <ImageButton
             android:id="@+id/buttonPlay"
@@ -106,9 +115,9 @@
             android:layout_height="50dp"
             android:layout_gravity="bottom"
             android:background="@null"
+            android:contentDescription="@string/description"
             android:scaleType="centerCrop"
-            android:src="@drawable/play"
-            android:contentDescription="@string/description"/>
+            android:src="@drawable/play" />
 
     </LinearLayout>
 
