--- a/app/src/main/res/layout/activity_page_hard.xml
+++ b/app/src/main/res/layout/activity_page_hard.xml
@@ -87,7 +87,7 @@
             android:background="@null"
             android:contentDescription="@string/description"
             android:scaleType="centerCrop"
-            android:src="@drawable/music" />
+            android:src="@drawable/music_off" />
 
         <ImageButton
             android:id="@+id/buttonSetting"
