--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="grey">#8E8E8E</color>
     <color name="green">#5AB55D</color>
     <color name="red">#F81606</color>
+    <color name="blue">#769efe</color>
+    <color name="green2">#0cfc1d</color>
 
 
     <color name="yellow">#E88C05</color>
