--- a/app/src/main/res/layout/activity_page_hard.xml
+++ b/app/src/main/res/layout/activity_page_hard.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
 
-    android:background="@drawable/img"
+    android:background="@drawable/background_blue"
     tools:context=".PageHard">
 
     <LinearLayout
@@ -23,7 +23,7 @@
             android:layout_marginBottom="180dp"
             android:gravity="center"
             android:text="Сложный Уровень"
-            android:textColor="@color/yellow"
+            android:textColor="@color/blue"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -63,8 +63,17 @@
                 android:id="@+id/buttonStartTimer"
                 android:layout_width="123dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/color_change"
+                android:background="@drawable/color_hard"
                 android:text="начать"
+                android:textColor="@color/black"
+                android:textSize="18dp" />
+            <Button
+                android:id="@+id/buttonStopTimer"
+                android:layout_width="123dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/color_hard"
+                android:text="Стоп"
+                android:layout_marginTop="4dp"
                 android:textColor="@color/black"
                 android:textSize="18dp" />
         </LinearLayout>
