--- a/app/src/main/res/layout/activity_page_average.xml
+++ b/app/src/main/res/layout/activity_page_average.xml
@@ -75,6 +75,7 @@
                 android:text="Стоп"
                 android:layout_marginTop="4dp"
                 android:textColor="@color/black"
+                android:visibility="invisible"
                 android:textSize="18dp" />
         </LinearLayout>
 
