--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="red">#F81606</color>
     <color name="blue">#769efe</color>
     <color name="green2">#0cfc1d</color>
+    <color name="green3">#346538</color>
 
 
     <color name="yellow">#E88C05</color>
